# virtuals-assignment

./: .gitignore  ABI_MANAGEMENT.md  GRADUATION_FIX_SUMMARY.md  README.md  TEST_SUMMARY.md  UNISWAP_INTEGRATION.md  hardhat.config.ts  package-lock.json  package.json
.cursor/rules/: frontend-development.mdc  protocol-economics.mdc  smart-contracts-guide.mdc  testing-and-deployment.mdc  virtual-protocol-overview.mdc
contracts/: AgentFactory.sol  AgentTokenExternal.sol  AgentTokenInternal.sol  BondingCurve.sol  EasyV.sol
contracts/fun/: Bonding.sol  FERC20.sol  FRouter.sol
contracts/interfaces/: IAgentFactory.sol  IUniswapV2Factory.sol  IUniswapV2Router02.sol
contracts/mocks/: MockUniswapRouter.sol
curve_modelling/: README.md  __init__.py  app.py  bonding_curves.py  main.py  metrics.py  pyproject.toml  requirements.txt  simulation.py
ignition/modules/: AgentFactory.ts  BondingCurveImplementation.ts  EasyV.ts  FullDeployment.ts  FullDeploymentWithUniswap.ts  FunSystemDeployment.ts
scripts/: README.md  checkBalance.ts  copy-abis.js  createAgent.ts  debugBonding.ts  debugTokenState.ts  deploy.ts  quickDeploy.ts  testBuyFix.ts  testDirectBonding.ts  testFrontendData.ts  testGraduation.ts
test/: AgentFactory.test.ts  AgentFactoryOnly.test.ts  BondingCurve.test.ts  BondingCurveFun.test.ts  BondingCurveUniswap.test.ts  BondingIntegration.test.ts  EasyV.test.ts  Integration.test.ts  SimpleGraduation.test.ts  UniswapGraduation.test.ts  WorkingIntegration.test.ts
virtuals-ui/: README.md  package-lock.json  package.json
virtuals-ui/src/app/: layout.tsx  page.tsx
(+4 files in other folders)
